--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -1,5 +1,6 @@
 <div>
-  <h5 class="font-semibold">Overdue <b id="count-overdue"> 3</b></h5>
+  <h5 class="font-semibold">Overdue</h5>
+  <b id="count-overdue">3</b>
   <ul class="list-none">
     <li class="todo-item">
       <div
@@ -47,7 +48,8 @@
       </div>
     </li>
   </ul>
-  <h5 class="font-semibold">Due Today <b id="count-due-today"> 2</b></h5>
+  <h5 class="font-semibold">Due Today </h5>
+  <b id="count-due-today"> 2</b>
   <ul>
     <li class="todo-item">
       <div
@@ -80,7 +82,8 @@
       </div>
     </li>
   </ul>
-  <h5 class="font-semibold">Due Later <b id="count-due-later"> 2</b></h5>
+  <h5 class="font-semibold">Due Later </h5>
+  <b id="count-due-later"> 2</b>
   <ul>
     <li class="todo-item">
       <div
